01-start here/style.css
/* Custom properties */

:root {
  --spacer: 1rem;

  --clr-neutral-900: #171717;
  --clr-neutral-700: #333;
  --clr-neutral-300: #cfcfcf;
  --clr-neutral-100: #fff;
  --clr-accent-400: #59e89c;
  --clr-accent-500: #00986a;

  --ff-primary: "PT Sans", sans-serif;

  --fs-700: 2.25rem;
  --fs-600: 1.5rem;
  --fs-500: 1.25rem;
  --fs-400: 1.125rem;
  --fs-300: 0.9375rem;

  --fw-700: 700;
  --fw-400: 400;

  --box-shadow: 0 0.25em 1.5em rgba(0, 0, 0, 0.15);
}

/* reset */

*,
*::before,
*::after {
  box-sizing: border-box;
}

h1,
h2,
h3,
p {
  margin: 0;
}

ul[class],
ol[class] {
  list-style: none;
  padding: 0;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

/* Utility classes */
.flow-content > * + * {
  margin-top: var(--flow-space, var(--spacer));
}

.flow-content--large {
  --flow-space: 3rem;
}

.container {
  padding: 0 var(--spacer);
  max-width: 70rem;
  margin: 0 auto;
}

.split {
  display: flex;
  flex-direction: column;
  /* gap: var(--spacer); */
}

.split > * + * {
  margin: calc(var(--spacer) * 3) 0 0 0;
}

@media (min-width: 40em) {
  .split {
    flex-direction: row;
    justify-content: space-between;
  }

  .split > * {
    flex-basis: 100%;
  }

  .split > * + * {
    margin: 0 0 0 var(--spacer);
  }
}

.a-center {
  align-items: center;
}

.shadow {
  box-shadow: var(--box-shadow);
}

.bg-dark {
  color: var(--clr-neutral-100);
  background: var(--clr-neutral-900);
}

.text-accent {
  color: var(--clr-accent-400);
}

/* general styling */

body {
  font-family: var(--ff-primary);
  font-size: 1.25rem;
  font-weight: 400;
  color: var(--clr-neutral-900);
  margin: 0;
}

h1 {
  font-weight: 400;
}

h1 span {
  font-weight: 700;
}

a {
  color: var(--clr-accent-500);
  text-decoration: none;
  font-weight: var(--fw-700);
}

.btn {
  display: inline-block;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  font-weight: 700;
  font-size: 1.125rem;
  color: inherit;
  padding: 0.75em 1.5em;
  background-color: var(--clr-accent-400);
  color: var(--clr-neutral-900);
}

/* navigation */

header {
  padding: var(--spacer) 0;
}

@media (min-width: 40em) {
  header {
    position: sticky;
    z-index: 1000;
    top: 0;
  }
}

.logo {
  max-width: 3rem;
}

.nav-list {
  display: flex;
  justify-content: center;
  gap: 2em;
}

.nav-list a {
  font-size: 1rem;
  text-decoration: none;
  color: var(--clr-neutral-100);
  text-transform: uppercase;
  letter-spacing: 3px;
}

.nav-list a:hover {
  color: var(--clr-accent-400);
}

/* general layout */
section {
  padding: 4.125rem 0;
}

@media (min-width: 40em) {
  section {
    padding: 8.125rem 0;
  }
}

/* individual sections */

.hero img {
  transform: translateY(2em);
}

@media (min-width: 40em) {
  .hero {
    padding: 0;
  }
}

.join-now li::before {
  content: "";
  display: block;
  width: 5rem;
  height: 5rem;
  background: var(--clr-accent-400);
  position: absolute;
  z-index: -1;
  transform: translate(-0.5rem, -0.5rem);
}

.join-now li:nth-child(even)::before {
  background-color: var(--clr-neutral-700);
}

.cta {
  background-image: url(assets/cta-bg.jpg);
  background-size: cover;
  text-align: center;
}

.hero .section-title {
  background-color: var(--clr-neutral-900);
  color: var(--clr-accent-400);
  width: 12rem;
  font-size: var(--fs-300);
  text-align: center;
}

.hero .first-p {
  font-size: var(--fs-700);
}

.hero .first-p span {
  font-weight: bold;
}

.hero .second-p a {
  color: #171717;
  font-weight: 100;
  font-size: var(--fs-500);
}

.cta-learning {
  /* background: url('assets/cta-bg-1.jpg') contain; */
  /* background-image: url('assets/cta-bg-1.jpg'), linear-gradient(var(--clr-accent-400)); */
  /* background-image: linear-gradient(var(--clr-accent-400) 100%), url('assets/cta-bg-1.jpg'); */
  background-image: linear-gradient(#00986a99 100%), url('assets/cta-bg-1.jpg');
  background-size: cover, cover;
}

.cta-learning .container {
  margin:auto;
  display:flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items:center;
}

.cta-learning .section-title {
  background-color: var(--clr-neutral-900);
  font-size: var(--fs-300);
  width:max-content;
  padding: 0 0.5rem;
}

.cta-learning .first-p {
  color: var(--clr-neutral-900);
  font-weight: var(--fw-700);
  font-size: var(--fs-700)
}

.cta-learning .second-p{
  color: var(--clr-neutral-900);
  width: 50vw;
}

.cta-learning .btn {
  color: var(--clr-neutral-900);
  background-color: var(--clr-neutral-300);
}

.testimonials .container {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
}

.testimonials .section-title {
  --m-width : max-content;
  background-color: var(--clr-neutral-900);
  color: var(--clr-accent-400);
  font-size: var(--fs-300);
  display: inline-block;
  width: max-content;
  padding: 0 0.5rem;
  /* width: var(--m-width); */
}

.testimonials .first-p {
  color: var(--clr-neutral-900);
  font-weight: var(--fw-700);
  font-size: var(--fs-700)
}

.testimonials .second-p{
  color: var(--clr-neutral-900);
  width: 50vw;
}

.t-dark {
  --bg-clr :var(--clr-neutral-900);
  --fg-clr : var(--clr-neutral-100);
  --name-clr : var(--clr-accent-400);
  --before-clr: var(--clr-accent-400);
}

.t-light {
  --bg-clr : var(--clr-accent-400);
  --fg-clr : var(--clr-neutral-900);
  --name-clr : var(--clr-neutral-900);
  --before-clr: var(--clr-neutral-900)
}

.testimonial {
  background-color: var(--bg-clr, var(--clr-neutral-900));
  color: var(--fg-clr, var(--clr-neutral-100));
  padding: 2rem 2rem 2rem 2rem;
  flex-basis: 25%;
  text-align: left;
  position: relative;
  z-index: 10;
}

.testimonial::before {
  content: "";
  display: inline-block;
  width: 5rem;
  height: 5rem;
  background-color: var(--before-clr, red);
  transform: translate(-3rem, -3rem);
  z-index: -100;
}

.testimonial p:nth-child(1) {
  margin-bottom: 4rem;
}

.testimonial .name {
  font-weight: var(--fw-700);
  color: var(--name-clr);
}


/* .  */

